Github Pages Repository Assignment

--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MTM6201-030</title>
+    <title>Kriszel Lada</title>
 </head>
-<body>
-   <header>
-        <h1>MTM6201-030</h1>
-   </header>
-   <main>
-        <h2>Week1 demo</h2>
-        <p>We are learning about Github and Repos.</p>
-   </main>
-   <footer>
 
-   </footer>
+<body>
+    <header>
+        <h1>Kriszel Lada</h1>
+    </header>
+    <main>
+
+        <!-- Professional image of yourself -->
+        <img src="img/IMG_2724.jpg" alt="Kriszel Lada" width="150" height="200">
+
+        <!-- Description List -->
+        <dl>
+            <dt><strong>Student Number:</strong></dt>
+            <dd>41063961</dd>
+
+            <dt><strong>Program Name:</strong></dt>
+            <dd>Interactive Media Design CO-OP</dd>
+
+            <dt><strong>Course Code:</strong></dt>
+            <dd>MTM6201_030 Web Development II</dd>
+
+            <dt><strong>A Fact About Me:</strong></dt>
+            <dd>I love collecting legos and mechanical puzzles to put on display!</dd>
+        </dl>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
